codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mixed_tool_calls_render_as_one_compact_group.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Using tools
  └ Search needle in src
    Read main.rs
    Ran echo a-command-that-is-too-long-to-fit-on-one-line-without-truncation
    Viewed Image artifact.png
