codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__search_and_read_render_under_explored.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Explored
  └ Search needle in src
    Read main.rs
